data/derived/fa15/progs/unify/prog1859.ml.out
Characters 39-40:
  let _ = eval (Sine(Average(VarX,VarY)),0,-0.5);;
                                         ^
Error: This expression has type int but an expression was expected of type
         float
